--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,3 +33,30 @@ h1 {
     border-radius: 5px;
     
 }
+#second-heading{
+    background-color: steelblue;
+    margin: 0;
+    text-align: center;
+}
+.container2 {
+    display: flex;
+    gap: 10%;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    padding: 5px;
+    background-color: cadetblue;
+    font-size: 0.5rem;
+}    
+.boxes{
+    border: 5px solid cornflowerblue;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+}
+button {
+    background-color: antiquewhite;
+    font-weight: 600;
+    border-radius: 5px;
+    
+}
