--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,7 +61,7 @@ button {
     
 } */
 
-.container {
+/* .container {
     border: 2px solid salmon;
     margin: 10px;
     padding-top: 20px;
@@ -89,11 +89,37 @@ button {
 }
 .hidden-content.reveal-btn {
     display: block;
-}
+} */
 
+/* MAKING A CUSTOM FUNCTION, THIS IS THE CSS PART */
 
+.msgBox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 242px;
+    background: rgb(185, 219, 255);
+  }
 
+  .msgBox p {
+    line-height: 1.5;
+    padding: 10px 20px;
+    color: rgb(255, 79, 79);
+    padding-left: 82px;
+    background-position: 25px center;
+    background-repeat: no-repeat;
+  }
 
+  .msgBox button {
+    background: none;
+    border: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1.1rem;
+    color: #aaa;
+  }
 
 
 
