--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,129 +1,14 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: whitesmoke;
+    color: rgb(255, 54, 18);
 }
-/* .header {
+h1{
     text-align: center;
-    background-color: azure;
-    border-bottom: 2px solid grey;
-    padding-top: 20px;
+    font-size: 4rem;
 }
-h1 {
-    margin-top: 0;
-}
-
-.container1 {
-    margin: 10px;
-    padding: 0;
-    border: 5px solid rgb(246, 213, 251);
-    background-color:thistle;
-}
-.container1 h1 {
+h2{
     text-align: center;
-    color: rgb(255, 215, 162);
+    font-size: 3.5rem;
 }
-.container1 ul{
-    padding: 0;
-}
-.list-items{
-    display: flex;
-    justify-content: center;
-    margin: 5px;
-    background-color: bisque;
-    border-radius: 5px;
-    
-}
-#second-heading{
-    background-color: steelblue;
-    margin: 0;
-    text-align: center;
-}
-.container2 {
-    display: flex;
-    gap: 10%;
-    align-items: center;
-    justify-content: center;
-    margin: 0px;
-    padding: 5px;
-   
-    font-size: 0.5rem;
-}    
-.boxes{
-    border: 5px solid cornflowerblue;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 10px;
-}
-button {
-    background-color: antiquewhite;
-    font-weight: 600;
-    border-radius: 5px;
-    
-} */
-
-/* .container {
-    border: 2px solid salmon;
-    margin: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    gap: 10px;
-}
-
-.boxes {
-    background-color: white;
-    border: 2px solid seagreen;
-    font-style: italic;
-    color:teal;
-    font-weight: 900;
-    font-size: x-large;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.hidden-content {
-    display: none;
-}
-.hidden-content.reveal-btn {
-    display: block;
-} */
-
-/* MAKING A CUSTOM FUNCTION, THIS IS THE CSS PART */
-/* 
-.msgBox {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 242px;
-    background: rgb(185, 219, 255);
-  }
-
-  .msgBox p {
-    line-height: 1.5;
-    padding: 10px 20px;
-    color: rgb(255, 79, 79);
-    padding-left: 82px;
-    background-position: 25px center;
-    background-repeat: no-repeat;
-  }
-
-  .msgBox button {
-    background: none;
-    border: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 1.1rem;
-    color: #aaa;
-  } */
-/* 
-RETURN FUNCTION */
-input {
-    font-size: 2em;
-    margin: 10px 1px 0;
-  }
-
