--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,30 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: whitesmoke;
+    background-color: rgb(0, 0, 0);
     color: rgb(255, 54, 18);
+    
 }
 h1{
     text-align: center;
-    font-size: 4rem;
+    font-size: 2rem;
 }
 h2{
     text-align: center;
-    font-size: 3.5rem;
+    font-size: 1.5rem;
+}
+.buttons{
+    display: grid;
+    place-items: center;
+    width: 100%;
+}
+button{
+    background-color: steelblue;
+    font-size: 1.5rem;
+}
+span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
 }
