--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,17 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 54, 18);
-    
+    background-color: rgb(8, 72, 2);
+    color: rgb(255, 255, 255);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 h1{
+    color: goldenrod;
     text-align: center;
     font-size: 2rem;
 }
@@ -13,18 +19,24 @@ h2{
     text-align: center;
     font-size: 1.5rem;
 }
-.buttons{
-    display: grid;
-    place-items: center;
-    width: 100%;
-}
+
 button{
-    background-color: steelblue;
-    font-size: 1.5rem;
+    background-color: goldenrod;
+    font-size: 2.5rem;
+    color:rgb(8, 72, 2);
+    width: 150px;
+    height: 90px;
 }
 span{
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 2.5rem;
+}
+p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.75rem;
+    font-style: italic;
 }
