--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,7 @@
-body {
+/* blackjack */
+
+
+/* body {
     margin: 0;
     padding: 0;
     background-color: rgb(8, 72, 2);
@@ -39,4 +42,63 @@ p{
     justify-content: center;
     font-size: 1.75rem;
     font-style: italic;
+} */
+
+/* blackjack */
+
+/* chrome extension */
+
+body{
+    margin: 0;
+    padding: 10px;
+    background-color:rgb(1, 72, 0);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+.container{
+    display: grid;
+    grid-gap: 0.2rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.4fr 0.4fr;
+    grid-template-areas: 
+    "in in"
+    "btn1 btn2";
+    width: 300px;
+    height: 5rem;
+    padding: 5px;
+    border-radius: 10px;
+    padding-bottom: 0;
+    padding-top: 10px;
+    background-color: rgba(250, 235, 215, 0.189);
+}
+input{
+    grid-area: in;
+    background-color: teal;
+    color: whitesmoke;
+    font-weight: 900;
+    border: none;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+
+button{
+    border-radius: 5px;
+    font-weight: 800;
+    color: white;
+    background-color:firebrick;
+
+}
+
+#input-btn{
+    grid-area: btn1;
+}
+
+#save.btn{
+    grid-area: btn2;
+}
+
+
+
+/* chrome extension */
+
