--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,5 +104,19 @@ button{
     grid-area: ul;
 }
 
+
+ul{
+    margin-top: 20px;
+   list-style: none; 
+   padding-left: 0;    
+}
+li{
+    margin-top: 5px;
+}
+
+a{
+    color: whitesmoke;
+}
+
 /* chrome extension */
 
